Fix popover titlebar item alignment

--- a/hsreplaynet/static/styles/base.scss
+++ b/hsreplaynet/static/styles/base.scss
@@ -452,6 +452,9 @@ header .navbar {
 .popover-title {
 	background-color: $lightblue;
 	color: white;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
 }
 
 .popover.bottom > .arrow:after {
